--- a/size.css
+++ b/size.css
@@ -37,23 +37,20 @@
   }
 
   .icon-mobile-nav {
-    font-size: 30px;
-    color: #940b12;
+    font-size: 20px;
+    color: #333;
   }
 
-
-  .main-nav.open {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    background: #fff;
-    padding: 20px;
+  .header.nav-open .main-nav {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    gap: 15px;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: white;
+    width: 100%;
+    z-index: 1000;
+    padding: 1.5rem 0;
   }
 
   .name a {
@@ -75,7 +72,6 @@
   .main-nav-list {
     flex-direction: column;
     gap: 1rem;
-    margin-top: 1rem;
   }
 
   .home,
@@ -84,6 +80,12 @@
   .grid-2-cols {
     grid-template-columns: 1fr !important;
     gap: 2rem;
+  }
+
+  .self-intro {
+    font-family: "Inter";
+    font-size: 15px;
+    line-height: 1.2;
   }
 
   .profile-picture {
@@ -98,9 +100,10 @@
 
   .project-content,
   .blog-content {
-    width: 100%;
-    height: auto;
-    padding: 12px;
+    width: 90%;
+    min-height: 440px;
+    padding: 16px;
+    margin: 0 auto;
   }
 
   .heading {
@@ -111,9 +114,12 @@
     font-size: 16px;
   }
 
-  .text-subheader,
-  .text-content {
+  .text-subheader {
     font-size: 12px;
+  }
+
+  .text-content {
+    font-size: 15px;
   }
 
   .btn,
@@ -146,7 +152,7 @@
   }
 
   .number {
-    font-size: 50px;
+    font-size: 60px;
   }
 
   .skill-img {
