--- a/style.css
+++ b/style.css
@@ -308,6 +308,12 @@
   color: black !important;
 }
 
+.resume-container {
+  width: 100%;
+  height: 100vh; 
+  overflow: hidden;
+}
+
 .resume-pdf {
   width: 100%;
   height: 1125px;
