--- a/size.css
+++ b/size.css
@@ -14,6 +14,7 @@
   }
 }
 
+
 @media (max-width: 768px) {
   body {
     font-size: 70%;
@@ -37,7 +38,7 @@
   }
 
   .icon-mobile-nav {
-    font-size: 15px;
+    width: 100%;
     color: #333;
   }
 
