--- a/size.css
+++ b/size.css
@@ -30,11 +30,16 @@
     display: none;
   }
 
+  .social-links-header {
+    display: none;
+  }
+
   .btn-mobile-nav {
     display: block;
     background: transparent;
     border: none;
     cursor: pointer;
+    z-index: 1001;
   }
 
   .icon-mobile-nav {
@@ -54,20 +59,25 @@
     padding: 1.5rem 0;
   }
 
+  .name {
+    flex-grow: 1;
+    text-align: center;
+  }
+
   .name a {
     font-size: 20px;
   }
 
-  .social-icon {
-    height: 1rem;
-    width: 1rem;
-  }
-
   .header {
-    grid-template-columns: 1fr;
-    height: auto;
-    padding: 1rem;
-    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 60px;
+    position: fixed;
+    padding: 0 1rem;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
   }
 
   .main-nav-list {
@@ -84,28 +94,42 @@
   }
 
   .intro {
-    padding: 0 20px;
+    padding-left: 20px;
+    text-align: center;
   }
 
   .self-intro {
     font-size: 15px;
     line-height: 1.3;
+    margin-bottom: 1rem;
   }
 
   .profile-picture {
-    height: 280px;
+    height: 260px;
+    padding: 1rem 0;
   }
 
-  .profile-picture img,
+  .profile-picture img {
+    height: auto;
+    max-height: 100%;
+    object-fit: contain;
+  }
+
   .skill-img {
     width: 100%;
     height: auto;
   }
 
-  .project-content,
-  .blog-content {
+  .project-content {
     width: 90%;
     min-height: 400px;
+    padding: 16px;
+    margin: 0 auto;
+  }
+
+  .blog-content {
+    width: 90%;
+    min-height: 350px;
     padding: 16px;
     margin: 0 auto;
   }
@@ -171,10 +195,6 @@
     justify-content: flex-start; 
   }
 
-  .social-links-header {
-    display: none;
-  }
-
   .resume-container {
     padding: 0 0.5rem;
   }
@@ -182,6 +202,11 @@
   .resume-pdf {
     height: 85vh;
     max-height: none;
+  }
+
+  .social-icon {
+    height: 1.5rem;
+    width: 1.5rem;
   }
 }
 
