--- a/style.css
+++ b/style.css
@@ -236,6 +236,26 @@
   width: 450px;
 }
 
+.skill-img-box-cert {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, auto);
+  gap: 10px;
+  width: 450px;
+}
+
+.skill-img-cert-1 {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;  
+  width: 90%;
+}
+
+.skill-img-cert-2 {
+  grid-column: 2 / 4;
+  grid-row: 2 / 3;
+  width: 100%;
+}
+
 .skills div:last-child {
   margin-top: auto;
   padding-bottom: 5px;
